SubBt/force-app/main/default/objects/BT_Change_Order_Payment_Tracking__c/fields/Balance_To_Finish__c.field-meta.xml
<CustomField>
    <fullName>Balance_To_Finish__c</fullName>
    <label>Balance To Finish</label>
    <summarizedField>Change_Order_Payment_Tracking_Line__c.Balance_To_Finish__c</summarizedField>
    <summaryForeignKey>Change_Order_Payment_Tracking_Line__c.Change_Order_Payment_Tracking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>