SubBt/force-app/main/default/objects/BT_Change_Order_Payment_Tracking__c/fields/Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Change_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Order</label>
    <referenceTo>Change_Order__c</referenceTo>
    <relationshipLabel>Change Order Payment Trackings</relationshipLabel>
    <relationshipName>Change_Order_Payment_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>