SubBt/force-app/main/default/objects/BT_Change_Order_Payment_Tracking__c/fields/Continuation_Sheet_Line__c.field-meta.xml
<CustomField>
    <fullName>Continuation_Sheet_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Continuation Sheet Line</label>
    <referenceTo>SOV_Continuation_Sheet_Lines__c</referenceTo>
    <relationshipLabel>Change Order Payment Trackings</relationshipLabel>
    <relationshipName>Change_Order_Payment_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>