SubBt/force-app/main/default/objects/BT_Change_Order_Payment_Tracking__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <formula>LastModifiedDate</formula>
    <label>Last Modified Date</label>
    <type>Date</type>
</CustomField>