SubBt/force-app/main/default/objects/BT_Change_Order_Payment_Tracking__c/fields/Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date__c</fullName>
    <label>Last Updated Date</label>
    <type>DateTime</type>
</CustomField>