SubBt/force-app/main/default/objects/BT_Change_Order_Payment_Tracking__c/fields/Old_Tracking_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Tracking_Id__c</fullName>
    <label>Old Tracking Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>