SubBt/force-app/main/default/objects/BT_Change_Order_Payment_Tracking__c/fields/Payment_Application_G702__c.field-meta.xml
<CustomField>
    <fullName>Payment_Application_G702__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Application - G702</label>
    <referenceTo>SOV_Payment_Application__c</referenceTo>
    <relationshipLabel>Change Order Payment Trackings</relationshipLabel>
    <relationshipName>Change_Order_Payment_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>