SubBt/force-app/main/default/objects/BT_Change_Order_Payment_Tracking__c/fields/Scheduled_Value__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Value__c</fullName>
    <label>Scheduled Value</label>
    <summarizedField>Change_Order_Payment_Tracking_Line__c.Scheduled_Value__c</summarizedField>
    <summaryForeignKey>Change_Order_Payment_Tracking_Line__c.Change_Order_Payment_Tracking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>