SubBt/force-app/main/default/objects/BT_Change_Order_Payment_Tracking__c/fields/Work_Completed_This_Period__c.field-meta.xml
<CustomField>
    <fullName>Work_Completed_This_Period__c</fullName>
    <label>Work Completed This Period</label>
    <summarizedField>Change_Order_Payment_Tracking_Line__c.Work_Completed_This_Period__c</summarizedField>
    <summaryForeignKey>Change_Order_Payment_Tracking_Line__c.Change_Order_Payment_Tracking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>